jitfailure-ffc_form_f54b53d30a770becc824b30c2d466137aa191518/error.log
/tmp/tmp56_0hv2f/ffc_form_f54b53d30a770becc824b30c2d466137aa191518.cpp: In member function ‘virtual void ffc_form_f54b53d30a770becc824b30c2d466137aa191518_cell_integral_main_11::tabulate_tensor(double*, const double* const*, const double*, int) const’:
/tmp/tmp56_0hv2f/ffc_form_f54b53d30a770becc824b30c2d466137aa191518.cpp:120:32: error: ‘coordinate_dofs_1’ was not declared in this scope; did you mean ‘coordinate_dofs’?
  120 |         const double x_r1_c1 = coordinate_dofs_1[1] * FE6_C0_Q6[0][iq][0] + coordinate_dofs_1[3] * FE6_C0_Q6[0][iq][1] + coordinate_dofs_1[5] * FE6_C0_Q6[0][iq][2];
      |                                ^~~~~~~~~~~~~~~~~
      |                                coordinate_dofs
